--- a/packages/est_server/Cargo.toml
+++ b/packages/est_server/Cargo.toml
@@ -7,7 +7,9 @@ license = "AGPL-3.0-only"
 [dependencies]
 axum = { version = "0.7.*", features = ["macros"] }
 serde = { version = "1.0.215", features = ["derive"] }
+serde_with = "3.11.0"
 slotmap = "1.0.7"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+toml = "0.8.19"
 url = "2.5.3"
 winnow = "0.6.20"
