--- a/.github/workflows/build-monolith.yaml
+++ b/.github/workflows/build-monolith.yaml
@@ -14,17 +14,24 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: monolith
-
-      - name: Build Docker image
-        run: |
-          docker build -t tomyxw/est_server:latest packages/est_server
-
-      - name: Save Docker image to file
-        run: |
-          docker save tomyxw/est_server:latest -o est_server.tar
-
-      - name: Upload Docker image to GitHub
-        uses: actions/upload-artifact@v4
+      
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
         with:
-          name: est_server.${{ github.sha }}.tar
-          path: est_server.tar
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Add metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.actor }}/est_server
+
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
