doc: fix docker-compose example

--- a/packages/est_server/example/docker-compose.example.yml
+++ b/packages/est_server/example/docker-compose.example.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   est:
-    image: tomyxw/est_server:latest
+    image: ghcr.io/yixuan-wang/est_server:monolith 
     restart: always
     ports:
       - ${PORT}:3000
