feat(server): init core and server
Squashed commit of the following:

commit cf21e868a7610312abe1c10cbc0328fcc2a25945
Author: Yixuan-Wang <tom-yx_wang@outlook.com>
Date:   Fri Apr 11 13:33:00 2025 +0800

    ci: add Dockerfile and CI

commit 48b0ff09c5d21379626555887f6affaf55ddfb0c
Author: Yixuan-Wang <tom-yx_wang@outlook.com>
Date:   Thu Apr 10 21:21:33 2025 +0800

    chore: clean

commit 90e3b2cfc44e2f2fd040d37639dfb7f6f1262155
Author: Yixuan-Wang <tom-yx_wang@outlook.com>
Date:   Thu Apr 10 21:08:27 2025 +0800

    feat(core.compose): allow single-value shorthand

commit b3f7a4829b9dbbf26765b57f2bf92e3302e4a7a4
Author: Yixuan-Wang <tom-yx_wang@outlook.com>
Date:   Thu Apr 10 20:54:46 2025 +0800

    feat(core.engine): add ortho engine

commit ebcd5f987247bc0212611d7d34d9e3a1d323583f
Author: Yixuan-Wang <tom-yx_wang@outlook.com>
Date:   Thu Apr 10 18:37:28 2025 +0800

    doc(core): add example config

commit f49e7801393adbe9403f2c54dc9a8e6a0b9d3774
Author: Yixuan-Wang <tom-yx_wang@outlook.com>
Date:   Thu Apr 10 18:29:51 2025 +0800

    feat(core): allow setting default engine

commit 8a651702db64f5c4cd49486a7bdeb24ab1fce660
Author: Yixuan-Wang <tom-yx_wang@outlook.com>
Date:   Thu Apr 10 17:56:38 2025 +0800

    feat(core): support for namespace

commit ca6652cd5d21d3d611946878cc5812f673c92723
Author: Yixuan-Wang <tom-yx_wang@outlook.com>
Date:   Thu Apr 10 02:19:00 2025 +0800

    fix: remove clone in Engine::build

commit 159d3e00e78571761cc6b8e0a11f39ae65d871a3
Author: Yixuan-Wang <tom-yx_wang@outlook.com>
Date:   Thu Apr 10 02:08:45 2025 +0800

    feat(server): minimal working server

commit 80e07c786ce4dab17430987f7fd0cf61dbdb323d
Author: Yixuan-Wang <tom-yx_wang@outlook.com>
Date:   Wed Apr 9 03:37:57 2025 +0800

    feat(core.query): query parser

commit 9f91ed6d3be1bf72bbf048ef0fca933a7d4ecb46
Author: Yixuan-Wang <tom-yx_wang@outlook.com>
Date:   Sun Apr 6 18:43:57 2025 +0800

    feat(core.compose): compose engine

commit 78156af2aff16b3587e4f675495be

--- a/.github/workflows/build-server.yaml
+++ b/.github/workflows/build-server.yaml
@@ -1,8 +1,10 @@
-name: Build and Dockerize Monolith
+name: Build and Dockerize Server
 
 on:
   push:
-    branches: [ monolith ]
+    branches:
+      - main
+      - 'ci-*'
   workflow_dispatch:
 
 jobs:
@@ -11,9 +13,7 @@ jobs:
 
     steps:
       - name: Check out repository
-        uses: actions/checkout@v3
-        with:
-          ref: monolith
+        uses: actions/checkout@v4
       
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -31,7 +31,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: packages/est_server
           push: true
+          file: ./packages/est_server/Dockerfile
+          context: .
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
