--- a/packages/est_monolith/Dockerfile
+++ b/packages/est_monolith/Dockerfile
@@ -1,5 +1,3 @@
-ARG APP_NAME=est_server
-
 FROM rust:latest AS builder
 
 WORKDIR /app
@@ -10,7 +8,7 @@ RUN cargo build --release
 FROM gcr.io/distroless/cc-debian12 as runtime
 
 WORKDIR /app
-COPY --from=builder /app/target/release/${APP_NAME} /app/${APP_NAME}
+COPY --from=builder /app/target/release/est_server /app/est_server
 
 EXPOSE 3000
-CMD ["./${APP_NAME}"]
+CMD ["./est_server"]
