--- a/packages/est_server/Cargo.toml
+++ b/packages/est_server/Cargo.toml
@@ -1,15 +1,11 @@
 [package]
 name = "est_server"
 version = "0.1.0"
-edition = "2021"
-license = "AGPL-3.0-only"
+edition = "2024"
 
 [dependencies]
-axum = { version = "0.7.*", features = ["macros"] }
-serde = { version = "1.0.215", features = ["derive"] }
-serde_with = "3.11.0"
-slotmap = "1.0.7"
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-toml = "0.8.19"
-url = "2.5.3"
-winnow = "0.6.20"
+axum = "0.8.3"
+est_core = { version = "*", path = "../est_core" }
+serde = { version = "1.0.219", features = ["derive"] }
+tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
+toml = "0.8.20"
