--- a/packages/est_server/example/config.example.toml
+++ b/packages/est_server/example/config.example.toml
@@ -1,19 +1,44 @@
-[plugin.search]
-default_engine = "duckduckgo"
-# ["google", "bing", "baidu", "sogou", "duckduckgo", "wiki"]
+default = "search"
 
-[plugin.simple]
+[[engines]]
+id = "search"
+type = "ortho"
+default = "google"
+script = "han"
+to = "bing_cn"
 
-[[plugin.simple.rules]]
-name = "Google"
-template = "https://www.google.com/search?q={}"
-shortcut = "g"
-description = "Search with Google"
-suggestion = "https://www.google.com/complete/search?output=firefox&q={searchTerms}"
+[[engines]]
+id = "google"
+type = "cloze"
+shorthand = "g"
+template = "https://google.com/search?q={}"
 
-[[plugin.simple.rules]]
-name = "Bing"
+[[engines]]
+id = "bing"
+type = "ortho"
+shorthand = "b"
+default = "bing_global"
+script = "han"
+to = "bing_cn"
+
+[[engines]]
+id = "bing_global"
+type = "cloze"
 template = "https://www.bing.com/search?q={}"
-shortcut = ["b"]
-description = "Search with Bing"
-suggestion = "https://www.bing.com/osjson.aspx?form=OSDJAS&query={searchTerms}"
+
+[[engines]]
+id = "bing_cn"
+type = "cloze"
+template = "https://cn.bing.com/search?q={}"
+
+[[engines]]
+id = "duckduckgo"
+type = "cloze"
+shorthand = ["d", "ddg"]
+template = "https://duckduckgo.com/?q={}"
+
+[[engines]]
+id = "baidu"
+type = "cloze"
+shorthand = ["bd", "百度"]
+template = "https://www.baidu.com/s?wd={}"
