--- a/packages/est_server/Dockerfile
+++ b/packages/est_server/Dockerfile
@@ -1,14 +1,16 @@
-FROM rust:latest AS builder
+ARG APP_NAME=est_server
+
+FROM rust:alpine AS builder
 
 WORKDIR /app
 COPY . /app
 
-RUN cargo build --release
+RUN cargo build --locked --release
 
 FROM gcr.io/distroless/cc-debian12 as runtime
 
 WORKDIR /app
-COPY --from=builder /app/target/release/est_server /app/est_server
+COPY --from=builder /app/target/release/${APP_NAME} /app/${APP_NAME}
 
 EXPOSE 3000
-CMD ["./est_server"]
+CMD ["./${APP_NAME}"]
