--- a/packages/est_server/Dockerfile
+++ b/packages/est_server/Dockerfile
@@ -3,9 +3,9 @@ ARG APP_NAME=est_server
 FROM rust:alpine AS builder
 
 WORKDIR /app
-COPY . /app
 
-RUN cargo build --locked --release
+RUN --mount=type=bind,source=.,target=/app \
+    cargo build --locked --release
 
 FROM gcr.io/distroless/cc-debian12 as runtime
 
