--- a/packages/est_web/Dockerfile
+++ b/packages/est_web/Dockerfile
@@ -1,11 +1,11 @@
 # This Dockerfile assume the build is already done
 # and the output is in the .output directory
+# with node_modules ready
 
 FROM oven/bun:1-distroless AS runtime
 WORKDIR /usr/src/app
 
 COPY .output .
-RUN bun install --production --cwd server
 
 ENV HOST 0.0.0.0
 ENV PORT 8000
