--- a/.github/workflows/build-web.yaml
+++ b/.github/workflows/build-web.yaml
@@ -1,11 +1,11 @@
-name: Build and Dockerize Server
+name: Build and Dockerize Web
 
 on:
   push:
     branches:
       - main
       - 'ci-all-*'
-      - 'ci-server-*'
+      - 'ci-web-*'
   workflow_dispatch:
 
 jobs:
@@ -15,7 +15,7 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-      
+        
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -27,13 +27,25 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.actor }}/est_server
+          images: ghcr.io/${{ github.actor }}/est_web
 
-      - name: Build and push
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Bun build
+        run: |
+          cd packages/est_web
+          bun install
+          bun run build
+          cd .output
+          bun install --production --cwd server
+
+      - name: Docker build and push
         uses: docker/build-push-action@v5
         with:
           push: true
-          file: ./packages/est_server/Dockerfile
-          context: .
+          context: ./packages/est_web/
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
