--- a/packages/est_web/package.json
+++ b/packages/est_web/package.json
@@ -20,6 +20,8 @@
   },
   "devDependencies": {
     "@unocss/nuxt": "^66.1.0-beta.10",
+    "@vueuse/core": "^13.1.0",
+    "@vueuse/nuxt": "^13.1.0",
     "unocss": "^66.1.0-beta.10"
   }
 }
