--- a/packages/est_web/Dockerfile
+++ b/packages/est_web/Dockerfile
@@ -1,8 +1,8 @@
-# This Dockerfile assume the build is already done
+# This Dockerfile assumes the build is already done
 # and the output is in the .output directory
 # with node_modules ready
 
-FROM oven/bun:1-distroless AS runtime
+FROM node:20-alpine AS runtime
 WORKDIR /usr/src/app
 
 COPY .output .
@@ -10,4 +10,4 @@ COPY .output .
 ENV HOST 0.0.0.0
 ENV PORT 8000
 EXPOSE 8000
-ENTRYPOINT [ "bun", "run", "server/index.mjs" ]
+ENTRYPOINT [ "node", "server/index.mjs" ]
